--- a/index.html
+++ b/index.html
@@ -87,7 +87,12 @@
   </head>
   <body style="margin:0; overflow:hidden;">
     <!-- Overlay -->
-    <div id="overlay">Toca la pantalla para activar el audio ▶️</div>
+    <div id="overlay">
+      <div>
+        <p>👆 Toca la pantalla para activar el audio</p>
+        <p style="font-size: 0.9rem; opacity: 0.8;">Si es necesario reduce el zoom de tu cámara. Apunta tu cámara hacia el marcador.</p>
+      </div>
+    </div>
     <!-- Escena -->
     <a-scene
       vr-mode-ui="enabled:false"
