--- a/index.html
+++ b/index.html
@@ -154,9 +154,10 @@
                 emitevents="true"
                 cursor="fuse:false;rayOrigin:mouse"
                 id="markerA">
+
         <a-video src="#vid"
                  scale="1 1 1"
-                 position="0 0 0" <!-- ajustar si en Samsung sigue desplazado -->
+                 position="0 0 0"
                  rotation="-90 0 0"
                  class="clickable"
                  gesture-handler></a-video>
