--- a/index.html
+++ b/index.html
@@ -1,70 +1,130 @@
-<script>
-  AFRAME.registerComponent('videohandler', {
-    init () {
-      const marker  = this.el;
-      const vid     = document.querySelector('#vid');
-      const overlay = document.getElementById('overlay');
-      const videoEl = marker.querySelector('a-video');
-      let tapDone   = false;
-      let markerOn  = false;
-      let calibrado = false;
-
-      const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) || 
-                    (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1);
-
-      if (isIOS) {
-        vid.setAttribute('muted', 'true');
-        vid.setAttribute('playsinline', 'true');
-        vid.setAttribute('webkit-playsinline', 'true');
-        vid.muted = true;
-        vid.load();
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>AR Video Marker Demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/3.3.2/aframe/build/aframe-ar.js"></script>
+    <script src="https://unpkg.com/aframe-gesture-detector-component/dist/aframe-gesture-detector-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-event-set-component@5.0.0/dist/aframe-event-set-component.min.js"></script>
+    
+    <style>
+      body { margin: 0; overflow: hidden; }
+      #overlay {
+        position: absolute;
+        z-index: 2;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: rgba(0, 0, 0, 0.85);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-family: sans-serif;
+        font-size: 1.3em;
+        text-align: center;
+        padding: 20px;
       }
+    </style>
 
-      const unlock = () => {
-        tapDone = true;
-        overlay.style.display = 'none';
-        tryPlay();
-        window.removeEventListener('click',  unlock);
-        window.removeEventListener('touchend', unlock);
-      };
-      window.addEventListener('click',  unlock);
-      window.addEventListener('touchend', unlock);
+    <script>
+      AFRAME.registerComponent('videohandler', {
+        init () {
+          const marker  = this.el;
+          const vid     = document.querySelector('#vid');
+          const overlay = document.getElementById('overlay');
+          const videoEl = marker.querySelector('a-video');
+          let tapDone   = false;
+          let markerOn  = false;
+          let calibrado = false;
 
-      marker.addEventListener('markerFound', () => {
-        markerOn = true;
-        tryPlay();
+          const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) || 
+                        (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1);
 
-        // Calibrar posición una sola vez por detección
-        if (!calibrado) {
-          setTimeout(() => {
-            videoEl.setAttribute('position', '0 0 0'); // Centrado
-            videoEl.setAttribute('rotation', '-90 0 0'); // Plano sobre marcador
-            calibrado = true;
-          }, 500); // espera medio segundo para que el tracking se estabilice
-        }
-      });
-
-      marker.addEventListener('markerLost', () => {
-        markerOn = false;
-        vid.pause();
-        calibrado = false;
-      });
-
-      function tryPlay () {
-        if (tapDone && markerOn) {
           if (isIOS) {
+            vid.setAttribute('muted', 'true');
+            vid.setAttribute('playsinline', 'true');
+            vid.setAttribute('webkit-playsinline', 'true');
             vid.muted = true;
-            vid.play().then(() => {
+            vid.load();
+          }
+
+          const unlock = () => {
+            tapDone = true;
+            overlay.style.display = 'none';
+            tryPlay();
+            window.removeEventListener('click',  unlock);
+            window.removeEventListener('touchend', unlock);
+          };
+          window.addEventListener('click',  unlock);
+          window.addEventListener('touchend', unlock);
+
+          marker.addEventListener('markerFound', () => {
+            markerOn = true;
+            tryPlay();
+
+            // Calibrar posición una sola vez por detección
+            if (!calibrado) {
               setTimeout(() => {
+                videoEl.setAttribute('position', '0 0 0'); // Centrado en marcador
+                videoEl.setAttribute('rotation', '-90 0 0'); // Plano sobre marcador
+                calibrado = true;
+              }, 500); // espera medio segundo para estabilizar tracking
+            }
+          });
+
+          marker.addEventListener('markerLost', () => {
+            markerOn = false;
+            vid.pause();
+            calibrado = false;
+          });
+
+          function tryPlay () {
+            if (tapDone && markerOn) {
+              if (isIOS) {
+                vid.muted = true;
+                vid.play().then(() => {
+                  setTimeout(() => {
+                    vid.muted = false;
+                  }, 100);
+                }).catch(() => {});
+              } else {
                 vid.muted = false;
-              }, 100);
-            }).catch(() => {});
-          } else {
-            vid.muted = false;
-            vid.play().catch(() => {});
+                vid.play().catch(() => {});
+              }
+            }
           }
         }
-      }
-    }
-  });
-</script>
+      });
+    </script>
+  </head>
+
+  <body>
+    <div id="overlay">Toca la pantalla para iniciar la experiencia AR</div>
+
+    <a-scene 
+      vr-mode-ui="enabled: false" 
+      embedded 
+      arjs="sourceType: webcam; 
+            sourceWidth: 1280; sourceHeight: 720; 
+            displayWidth: 1280; displayHeight: 720; 
+            debugUIEnabled: false;">
+      
+      <a-assets>
+        <video id="vid" src="video.mp4" preload="auto" crossorigin="anonymous" webkit-playsinline playsinline></video>
+      </a-assets>
+
+      <a-marker type="pattern" url="marker.patt" videohandler gesture-detector>
+        <a-video src="#vid"
+                 scale="1 1 1"
+                 position="0 0 0"
+                 rotation="-90 0 0"
+                 class="clickable"
+                 gesture-handler></a-video>
+      </a-marker>
+
+      <a-entity camera></a-entity>
+    </a-scene>
+  </body>
+</html>
